[FIX] Repair order tax alignment
Visual fix for the repair order computed total

Removal of the deprecated button (update)

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -1197,3 +1197,11 @@
     clear: both;
     justify-content: space-between;
 }
+
+.o_footer_tax_separator{
+    width: 100%;
+    text-align: right;
+    border-top: 1px solid $border-color;
+    font-weight: $font-weight-bold;
+    font-size: 1.3em;
+}
